bin/src/commands/snapshots/hemtt__commands__script__tests__workspace_bad_script.snap
---
source: bin/src/commands/script.rs
expression: output
---
[32m INFO[0m Config loaded for My Mod 3.15.2.69
[32m INFO[0m Creating `dev` version
[32m INFO[0m Running hook: pre_build/01_vfs.rhai
[32m INFO[0m [pre_build/01_vfs.rhai] Running VFS script from pre_build hook...
[0m[1m[38;5;9merror[BHE4][0m[1m: Script /.hemtt/scripts/vfs.rhai failed at runtime[0m
  [0m[36m┌─[0m .hemtt/scripts/vfs.rhai:1:12
  [0m[36m│[0m
[0m[36m1[0m [0m[36m│[0m let text = [0m[31mH[0mEMTT_VFS.join("addons/ignore.txt").open_file().read();
  [0m[36m│[0m            [0m[31m^[0m [0m[31mvariable not found: HEMTT_VFS (line 1, position 12)[0m


[0m[1m[38;5;9merror[BHE4][0m[1m: Script /.hemtt/hooks/pre_build/01_vfs.rhai failed at runtime[0m
  [0m[36m┌─[0m .hemtt/hooks/pre_build/01_vfs.rhai:2:7
  [0m[36m│[0m
[0m[36m2[0m [0m[36m│[0m HEMTT.[0m[31ms[0mcript("vfs");
  [0m[36m│[0m       [0m[31m^[0m [0m[31mruntime error: Script 'vfs' reported errors (line 2, position 7)[0m
