bin/src/commands/snapshots/hemtt__commands__script__tests__workspace_post_release_math.snap
---
source: bin/src/commands/script.rs
expression: output
---
[32m INFO[0m Config loaded for My Mod 3.15.2.69
[32m INFO[0m [scripts/math.rhai] 36
